--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
         </style>
     </head>
     <body>
-      <iframe id="odysee-iframe" width="560" height="315" src="https://odysee.com/$/embed/@DJ,Deep,House,Music,Tech,House:0/Alok---Bhaskar-feat.-Magnus---See-You-There-(Extended-Mix):2?r=3WDZSdPswU9VUzsNQ3acHCnhyJs81E4L&autoplay=true" allowfullscreen></iframe>
+      <iframe id="odysee-iframe" width="100%" height="100%" src="https://odysee.com/$/embed/@DJ,Deep,House,Music,Tech,House:0/Alok---Bhaskar-feat.-Magnus---See-You-There-(Extended-Mix):2?r=3WDZSdPswU9VUzsNQ3acHCnhyJs81E4L&autoplay=true" allowfullscreen></iframe>
      </body>
 </html>
