--- a/index.html
+++ b/index.html
@@ -1,15 +1,1 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-    <head>
-        <title>Live Stream</title>
-        <style type="text/css">
-            body, html
-            {
-                margin: 0; padding: 0; height: 100%; overflow: hidden;
-            }
-        </style>
-    </head>
-    <body>
-      <iframe id="odysee-iframe" width="100%" height="100%" src="https://odysee.com/$/embed/@DJ,Deep,House,Music,Tech,House:0/Alok---Bhaskar-feat.-Magnus---See-You-There-(Extended-Mix):2?r=3WDZSdPswU9VUzsNQ3acHCnhyJs81E4L&autoplay=true" allowfullscreen></iframe>
-     </body>
-</html>
+<iframe id="odysee-iframe" style="position:fixed; top:0; left:0; bottom:0; right:0; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;" src="https://odysee.com/$/embed/@DJ,Deep,House,Music,Tech,House:0/Alok---Bhaskar-feat.-Magnus---See-You-There-(Extended-Mix):2?r=3WDZSdPswU9VUzsNQ3acHCnhyJs81E4L&autoplay=true" allowfullscreen></iframe>
