--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<iframe id="stream" width="560" height="315" src="https://www.youtube.com/watch_popup?v=Q9Kcky0pfVw&vq=hd1080&autoplay=1&start=120" allow="autoplay" allowfullscreen></iframe>
+<iframe id="stream" style="position:fixed; top:0; left:0; bottom:0; right:0; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;" src="https://www.youtube.com/watch_popup?v=Q9Kcky0pfVw&vq=hd1080&autoplay=1&start=120" allow="autoplay" allowfullscreen></iframe>
