--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<iframe id="stream" width="1920" height="1080" src="https://www.youtube.com/embed/Q9Kcky0pfVw?vq=hd1080&autoplay=1&start=120" allow="autoplay" allowfullscreen></iframe>
+<iframe id="stream" width="1920" height="1080" src="https://www.youtube-nocookie.com/embed/Q9Kcky0pfVw?vq=hd1080&autoplay=1&start=120" allow="autoplay" allowfullscreen></iframe>
