--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-<iframe id="stream" width="1920" height="1080" src="https://www.youtube-nocookie.com/embed/Q9Kcky0pfVw?vq=hd1080&autoplay=1&start=120" allow="autoplay" allowfullscreen></iframe>
+<video src="https://stream.vrcdn.live/live/edseviltwil.live.ts">
+    Your browser does not support the VIDEO tag and/or RTP streams.
+</video>
