--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     video.play()
   }
 }
-$(document).ready(function(){
+document.ready(function(){
   setTimeout(toggleMute,3000);
 })
 </script>
