--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     video.play()
   }
 }
-document.ready(function(){
-  setTimeout(toggleMute,3000);
-})
+document.addEventListener("DOMContentLoaded", function(event) { 
+   setTimeout(toggleMute,3000);
+});
+
 </script>
