--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<iframe src="https://olafwempe.com/mp3/silence/silence.mp3" type="audio/mp3" allow="autoplay" id="audio" style="display:none"></iframe>
 <video id="videostream" controls autoplay="true">
   <source src="https://stream.vrcdn.live/live/edseviltwil.live.mp4" type="video/mp4">
 </video>
