--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
-<iframe src="https://olafwempe.com/mp3/silence/silence.mp3" type="audio/mp3" allow="autoplay" id="audio" style="display:none"></iframe>
 <video id="videostream" controls autoplay="true">
   <source src="https://stream.vrcdn.live/live/edseviltwil.live.mp4" type="video/mp4">
 </video>
 
+<style>
+    video {
+        height: 100vh;
+        width: 100%;
+        object-fit: fill; // use "cover" to avoid distortion
+        position: absolute;
+    }
+</style>
 
 <script> 
   const video = document.getElementById("videostream");
