--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
-<video id="videostream" controls autoplay="true">
+<!DOCTYPE html>
+<html>
+<body>
+<video id="videostream"  width="320" height="240" controls autoplay>
   <source src="https://stream.vrcdn.live/live/edseviltwil.live.mp4" type="video/mp4">
 </video>
+</body>
+</html>
