--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     poster="MY_VIDEO_POSTER.jpg"
     data-setup="{}"
   >
-    <source src="https://stream.vrcdn.live/live/edseviltwil.live.mp4" type="video/mp4" />
+    <source src="https://stream.vrcdn.live/live/edseviltwin.live.mp4" type="video/mp4" />
     <p class="vjs-no-js">
       To view this video please enable JavaScript, and consider upgrading to a
       web browser that
